--- a/templates/core/layout.html.twig
+++ b/templates/core/layout.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="no-js">
+<html class="no-js" lang="fr">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,15 +9,15 @@
     <meta name="viewport" content="width=device-width">
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="public/css/normalize.min.css">
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel='stylesheet' href='public/css/formular.css'>
-    <link rel='stylesheet' href='public/css/jquery-ui.css'>
-    <link rel='stylesheet' href='public/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel='stylesheet' href='/css/formular.css'>
+    <link rel='stylesheet' href='/css/jquery-ui.css'>
+    <link rel='stylesheet' href='/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    <link href="public/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -30,13 +30,13 @@
     <link rel="apple-touch-icon-precomposed" href="public/images/apple-touch-icon-144x144-precomposed.png">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="public/css/normalize.min.css">
-    <link rel="stylesheet" href="public/css/main.css">
-    <script src="public/js/main.js"></script>
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/main.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="public/js/vendor/jquery.hashchange.min.js"></script>
-    <script src="public/js/vendor/jquery.easytabs.min.js"></script>
-    <script src="public/js/vendor/3.3.7-bootstrap.min.js"></script>
+    <script src="/js/vendor/jquery.hashchange.min.js"></script>
+    <script src="/js/vendor/jquery.easytabs.min.js"></script>
+    <script src="/js/vendor/3.3.7-bootstrap.min.js"></script>
 
 </head>
 <body class="bg-fixed bg-1">
@@ -78,5 +78,4 @@
             <div id="tab-data-wrap">
                 <!-- About Tab Data -->
                 <div id="about">
-
-
+</html>
