--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ img{max-width:100%;}
 
 
 body {
-	background:url(../../../../../../wamp/www/OLIVIER_BOUTET_P5/public/images/floor.jpg) no-repeat;
+	background:url(../images/floor.jpg) no-repeat;
 	background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -379,6 +379,64 @@ h2.copyright-agileits a:hover {
 	}
 }
 
+.notfound .notfound-404 h1 {
+	font-family: 'Montserrat', sans-serif;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50% , -50%);
+	-ms-transform: translate(-50% , -50%);
+	transform: translate(-50% , -50%);
+	font-size: 224px;
+	font-weight: 900;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: -12px;
+	color: #030005;
+	text-transform: uppercase;
+	text-shadow: -1px -1px 0px #8400ff, 1px 1px 0px #ff005a;
+	letter-spacing: -20px;
+}
+.notfound .notfound-404 h2 {
+	font-family: 'Montserrat', sans-serif;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 110px;
+	font-size: 42px;
+	font-weight: 700;
+	color: #fff;
+	text-transform: uppercase;
+	text-shadow: 0px 2px 0px #8400ff;
+	letter-spacing: 13px;
+	margin: 0;
+}
+.notfound .notfound-404 {
+	position: relative;
+	height: 180px;
+	margin-bottom: 20px;
+	z-index: -1;
+}
 
+#notfound {
+	position: relative;
+	height: 100vh;
+	/*background: #030005;*/
+}
 
+#notfound .notfound {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.notfound {
+	max-width: 767px;
+	width: 100%;
+	line-height: 1.4;
+	text-align: center;
+}
 /*--//responsive--*/
