--- a/templates/core/layout.html.twig
+++ b/templates/core/layout.html.twig
@@ -24,10 +24,10 @@
     <title>Olivier Boutet - Développeur</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="apple-touch-icon-precomposed" href="public/images/apple-touch-icon-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="public/images/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="public/images/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="public/images/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/public/images/apple-touch-icon-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/public/images/apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/public/images/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/public/images/apple-touch-icon-144x144-precomposed.png">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/normalize.min.css">
@@ -36,7 +36,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="/js/vendor/jquery.hashchange.min.js"></script>
     <script src="/js/vendor/jquery.easytabs.min.js"></script>
-    <script src="/js/vendor/3.3.7-bootstrap.min.js"></script>
+    <script src="/js/3.3.7-bootstrap.min.js"></script>
 
 </head>
 <body class="bg-fixed bg-1">
@@ -59,23 +59,34 @@
 
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
-                    <a href="#about"><i class="icon-user"></i><span> A propos</span></a>
+                    <a href="/"><i class="icon-user"></i><span> A propos</span></a>
                 </li>
                 <li class='tab'>
-                    <a href="#resume"><i class="icon-file-text"></i><span> Curriculum</span></a>
+                    <a href="resume/"><i class="icon-file-text"></i><span> Curriculum</span></a>
                 </li>
                 <li class='tab'>
-                    <a href="#portefolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                    <a href="portefolio/"><i class="icon-heart"></i><span> Portfolio</span></a>
                 </li>
                 <li class='tab'>
-                    <a href="#Blog"><i class="icon-envelope"></i><span> Blog</span></a>
+                    <a href="Blog/"><i class="icon-envelope"></i><span> Blog</span></a>
                 </li>
                 <li class='tab'>
-                    <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                    <a href="contact/"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
             </ul>
             <!-- End Tab List -->
             <div id="tab-data-wrap">
                 <!-- About Tab Data -->
                 <div id="about">
+{% block body %}{% endblock body %}
+{% block footer %}
+                    <footer>
+                        <p>
+                            Designed with lots of love Olivier Boutet :).
+                        </p>
+                    </footer>
+                    </div><!-- #main -->
+                    </div><!-- #main-container -->
+                    </body>
 </html>
+{% endblock footer %}
