--- a/templates/core/resume.html.twig
+++ b/templates/core/resume.html.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-
-<?php include 'views/layout/layout.php'?>
+{% extends 'core/layout.html.twig' %}
+{% block body %}
 
 <section class="clearfix">
     <div class="g2">
@@ -228,3 +227,4 @@
             </li>
         </ul>
     </div>
+{% endblock body %}
