--- a/templates/core/layout.html.twig
+++ b/templates/core/layout.html.twig
@@ -90,6 +90,6 @@
                     </footer>
                     </div><!-- #main -->
                     </div><!-- #main-container -->
-                    </body>
+    </div></div></body>
 </html>
 {% endblock footer %}
