--- a/public/css/connexion.css
+++ b/public/css/connexion.css
@@ -1,23 +1,10 @@
-
 /* BASIC */
-
-
-html {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
-  background-image: url(../../../../../../wamp/www/OLIVIER_BOUTET_P5/public/images/floor.jpg);
-  background-repeat:no-repeat;
-  background-size: cover;
-
-}
-
 a {
   color: #e7cab7;
   display:inline-block;
   text-decoration: none;
   font-weight: 400;
 }
-
 h2 {
   text-align: center;
   font-size: 16px;
@@ -27,11 +14,7 @@ h2 {
   margin: 40px 8px 10px 8px;
   color: #cccccc;
 }
-
-
-
 /* STRUCTURE */
-
 .wrapper {
   display: flex;
   align-items: center;
@@ -41,7 +24,6 @@ h2 {
   min-height: 100%;
   padding: 20px;
 }
-
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
@@ -55,7 +37,6 @@ h2 {
   box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   text-align: center;
 }
-
 #formFooter {
   background-color: #f6f6f6;
   border-top: 1px solid #dce8f1;
@@ -64,24 +45,15 @@ h2 {
   -webkit-border-radius: 0 0 10px 10px;
   border-radius: 0 0 10px 10px;
 }
-
-
-
 /* TABS */
-
 h2.inactive {
   color: #cccccc;
 }
-
 h2.active {
   color: #0d0d0d;
   border-bottom: 2px solid #5fbae9;
 }
-
-
-
 /* FORM TYPOGRAPHY*/
-
 input[type=button], input[type=submit], input[type=reset]  {
   background-color: #E1BDA5;
   border: none;
@@ -103,11 +75,9 @@ input[type=button], input[type=submit], input[type=reset]  {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
   background-color: #88540b;
 }
-
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
@@ -115,7 +85,6 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   -ms-transform: scale(0.95);
   transform: scale(0.95);
 }
-
 input[type=text] {
   background-color: #f6f6f6;
   border: none;
@@ -136,16 +105,13 @@ input[type=text] {
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
 }
-
 input[type=text]:focus {
   background-color: #f4e7de;
   border-bottom: 2px solid ;
 }
-
 input[type=text]:placeholder {
   color: ##f4e7de;
 }
-
 input[type=password] {
   background-color: #f6f6f6;
   border: none;
@@ -166,18 +132,13 @@ input[type=password] {
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
 }
-
 input[type=password]:focus {
   background-color: #f4e7de;
   border-bottom: 2px solid ;
 }
-
 input[type=password]:placeholder {
   color: ##f4e7de;
 }
-
-/* ANIMATIONS */
-
 /* Simple CSS3 Fade-in-down Animation */
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
@@ -187,7 +148,6 @@ input[type=password]:placeholder {
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-
 @-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -200,7 +160,6 @@ input[type=password]:placeholder {
     transform: none;
   }
 }
-
 @keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -213,7 +172,6 @@ input[type=password]:placeholder {
     transform: none;
   }
 }
-
 /* Simple CSS3 Fade-in Animation */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -233,31 +191,26 @@ input[type=password]:placeholder {
   -moz-animation-duration:1s;
   animation-duration:1s;
 }
-
 .fadeIn.first {
   -webkit-animation-delay: 0.4s;
   -moz-animation-delay: 0.4s;
   animation-delay: 0.4s;
 }
-
 .fadeIn.second {
   -webkit-animation-delay: 0.6s;
   -moz-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
-
 .fadeIn.third {
   -webkit-animation-delay: 0.8s;
   -moz-animation-delay: 0.8s;
   animation-delay: 0.8s;
 }
-
 .fadeIn.fourth {
   -webkit-animation-delay: 1s;
   -moz-animation-delay: 1s;
   animation-delay: 1s;
 }
-
 /* Simple CSS3 Fade-in Animation */
 .underlineHover:after {
   display: block;
@@ -269,16 +222,12 @@ input[type=password]:placeholder {
   content: "";
   transition: width 0.2s;
 }
-
 .underlineHover:hover {
   color: #0d0d0d;
 }
-
 .underlineHover:hover:after{
   width: 100%;
 }
-
-
 
 /* OTHERS */
 
@@ -287,5 +236,6 @@ input[type=password]:placeholder {
 }
 
 #icon {
-  width:60%;
+  margin-block: 20px;
+  width:30%;
 }
