--- a/templates/core/blog.html.twig
+++ b/templates/core/blog.html.twig
@@ -10,7 +10,7 @@
             <p class="lead">
                 by <a href="mailto:olivier.boutet@obt-development.eu">Olivier Boutet</a>
                 <button type="button" class="btn-perso" OnClick= 'window.location.href="/registration/"'>S'inscrire</button>
-                <button type="button" class="btn-perso"OnClick= 'window.location.href="template/registration.php"'>S'identifier</button>
+                <button type="button" class="btn-perso"OnClick= 'window.location.href="/connection/"'>S'identifier</button>
             </p>
 
             <hr>
