--- a/templates/core/contact.html.twig
+++ b/templates/core/contact.html.twig
@@ -1,77 +1,60 @@
 {% extends 'core/layout.html.twig' %}
 {% block body %}
 
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-<script src='js/formular.js'></script>
-
-<div id="contact">
-<section class="clearfix">
-    <div class="g3">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12 col-lg-offset-2">
-                    <h2 >PRENONS CONTACT ... </h2> <br>
-                </div>
-
-                <div class="col-lg-12 col-lg-offset-2">
-
-                    <form id="contact-form" method="post" action="" role="form">
-
-                        <div class="messages"></div>
-
+    <div id="contact">
+        <section class="clearfix">
+            <div class="container">
+                <div class="col-lg-12 col-lg-offset-1">
+                    <h2>PRENONS CONTACT ... </h2>
+                    <form id="contact-form" method="post" action="/contact" role="form">
                         <div class="controls">
-
                             <div class="row">
                                 <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label for="form_name">Firstname *</label>
-                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Votre prénom *" required="required" data-error="Votre prénom est nécessaire.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
+                                    <label for="form_name">Firstname *</label>
+                                    <input id="form_name" type="text" name="name" class="form-control"
+                                           placeholder="Votre prénom *" required="required"
+                                           data-error="Votre prénom est nécessaire.">
                                 </div>
                                 <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label for="form_lastname">Lastname *</label>
-                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Votre nom *" required="required" data-error="Votre nom est nécessaire.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
+                                    <label for="form_lastname">Lastname *</label>
+                                    <input id="form_lastname" type="text" name="lastName"
+                                           class="form-control" placeholder="Votre nom *"
+                                           required="required" data-error="Votre nom est nécessaire.">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-10">
-                                    <div class="form-group">
-                                        <label for="form_email">Email *</label>
-                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Votre mail *" required="required" data-error="Vvotre adresse mail n'est pas valide.">
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-10">
-                                    <div class="form-group">
-                                        <label for="form_message">Message *</label>
-                                        <textarea id="form_message" name="message" class="form-control" placeholder="Votre message ... *" rows="4" required data-error="S'il vous plaÃ®t, laisser un message."></textarea>
-                                        <div class="help-block with-errors"></div>
-                                    </div>
-                                </div>
-                                <div class="col-md-10">
-                                    <input type="submit" class="btn btn-success btn-send" value="Envoyer">
-                                </div>
-                            </div>
+                                    <label for="form_email">Email *</label>
+                                    {% for error in errors['E-mails']%}
+                                    <div class="alert alert-danger" size = "30">
+                                        {{ error }}
+                                    {% endfor %}
+                                    <input id="form_email" type="text" name="mail" class="form-control"
+                                           placeholder="Votre mail *" required="required"
+                                           data-error="Vvotre adresse mail n'est pas valide.">
 
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <label for="form_message">Message *</label>
+                                    <textarea id="form_message" name="message" class="form-control"
+                                              placeholder="Votre message ... *" rows="4" required
+                                              data-error="S'il vous plaît, laisser un message."></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <div class="submit-ob">
+                                        <input type="submit" value="Envoyer">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
                     </form>
-
                 </div>
-
             </div>
-
-        </div>
+        </section>
     </div>
-    <div class="break"></div>
-</section>
-
-
+    </div>
 {% endblock %}
