--- a/templates/core/layout.html.twig
+++ b/templates/core/layout.html.twig
@@ -2,6 +2,7 @@
 
 <html class="no-js" lang="fr">
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Olivier Boutet - Développeur</title>
@@ -10,11 +11,12 @@
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.min.css">
-{#    <link rel="stylesheet" href="/css/normalize.css">#}
+    {#    <link rel="stylesheet" href="/css/normalize.css">#}
+    <link rel='stylesheet' href='/css/bootstrap.min.css'>
     <link rel="stylesheet" href="/css/main.css">
     <link rel='stylesheet' href='/css/formular.css'>
     <link rel='stylesheet' href='/css/jquery-ui.css'>
-    <link rel='stylesheet' href='/css/bootstrap.min.css'>
+
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -40,56 +42,60 @@
 
 </head>
 <body class="bg-fixed bg-1">
-<div class="main-container">
-    <div class="main wrapper clearfix">
-        <!-- Header Start -->
-        <header id="header">
-            <div id="logo">
-                <h2>
-                    Olivier Boutet
-                </h2>
-                <h4>
-                    PHP / PYTHON / SQL / HTML / CSS / VBA / VBscript
-                </h4>
-            </div>
-        </header>
-        <!-- Header End -->
-        <!-- Main Tab Container -->
-        <div id="tab-container" class="tab-container">
+    <div class="main-container">
+        <div class="main wrapper clearfix">
+            <!-- Header Start -->
+            <header id="header">
+                <div id="logo">
+                    <h2>
+                        Olivier Boutet
+                    </h2>
+                    <h4>
+                        PHP / PYTHON / SQL / HTML / CSS / VBA / VBscript
+                    </h4>
+                </div>
+            </header>
+            <!-- Header End -->
+            <!-- Main Tab Container -->
+            <div id="tab-container" class="tab-container">
+                <ul class='etabs'>
+                    <li class='tab' id="tab-about">
+                        <a href="/"><i class="icon-user"></i><span> A propos</span></a>
+                    </li>
+                    <li class='tab'>
+                        <a href="/resume"><i class="icon-file-text"></i><span> Curriculum</span></a>
+                    </li>
+                    <li class='tab'>
+                        <a href="/portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                    </li>
+                    <li class='tab'>
+                        <a href="/blog"><i class="icon-envelope"></i><span> Blog</span></a>
+                    </li>
+                    <li class='tab'>
+                        <a href="/contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                    </li>
+                </ul>
+                <!-- End Tab List -->
+                <div id="tab-data-wrap">
+                    <!-- About Tab Data -->
+                    <div id="about">
+                    </div>
 
-            <ul class='etabs'>
-                <li class='tab' id="tab-about">
-                    <a href="/"><i class="icon-user"></i><span> A propos</span></a>
-                </li>
-                <li class='tab'>
-                    <a href="/resume/"><i class="icon-file-text"></i><span> Curriculum</span></a>
-                </li>
-                <li class='tab'>
-                    <a href="/portfolio/"><i class="icon-heart"></i><span> Portfolio</span></a>
-                </li>
-                <li class='tab'>
-                    <a href="/blog/"><i class="icon-envelope"></i><span> Blog</span></a>
-                </li>
-                <li class='tab'>
-                    <a href="/contact/"><i class="icon-envelope"></i><span> Contact</span></a>
-                </li>
-            </ul>
-            <!-- End Tab List -->
-            <div id="tab-data-wrap">
-                <!-- About Tab Data -->
-                <div id="about">
-{% block body %}{% endblock body %}
+                    {% block body %}{% endblock body %}
 
-            </div>
-{% block footer %}
+                    {% block footer %}
 
                     <footer>
                         <p>
                             Designed with lots of love by Olivier Boutet :).
                         </p>
                     </footer>
-                    </div><!-- #main -->
-                    </div><!-- #main-container -->
-    </div></div></body>
-</html>
+                </div><!-- #main -->
+            </div><!-- #main-container -->
+        </div>
+    </div>
+</body>
+
 {% endblock footer %}
+
+</html>
