--- a/templates/core/contact.html.twig
+++ b/templates/core/contact.html.twig
@@ -10,35 +10,50 @@
                         <div class="controls">
                             <div class="row">
                                 <div class="col-md-5">
+                                    {% for error in errors['name']%}
+                                        <div class="alert alert-danger">
+                                            {{ error }}
+                                        </div>
+                                    {% endfor %}
                                     <label for="form_name">Firstname *</label>
                                     <input id="form_name" type="text" name="name" class="form-control"
-                                           placeholder="Votre prénom *" required="required"
+                                           placeholder="Votre prénom *" required="required" value = "{{ name }}"
                                            data-error="Votre prénom est nécessaire.">
                                 </div>
                                 <div class="col-md-5">
+                                    {% for error in errors['lastName']%}
+                                        <div class="alert alert-danger">
+                                            {{ error }}
+                                        </div>
+                                    {% endfor %}
                                     <label for="form_lastname">Lastname *</label>
                                     <input id="form_lastname" type="text" name="lastName"
-                                           class="form-control" placeholder="Votre nom *"
+                                           class="form-control" placeholder="Votre nom *" value = "{{ lastName }}"
                                            required="required" data-error="Votre nom est nécessaire.">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-10">
                                     <label for="form_email">Email *</label>
-                                    {% for error in errors['E-mails']%}
-                                    <div class="alert alert-danger" size = "30">
-                                        {{ error }}
+                                    {% for error in errors['E-mail']%}
+                                        <div class="alert alert-danger">
+                                            {{ error }}
+                                        </div>
                                     {% endfor %}
                                     <input id="form_email" type="text" name="mail" class="form-control"
-                                           placeholder="Votre mail *" required="required"
-                                           data-error="Vvotre adresse mail n'est pas valide.">
-
+                                           placeholder="Votre mail *" value = "{{ mail }}" required="required"
+                                           data-error="Votre adresse mail n'est pas valide.">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-10">
-                                    <label for="form_message">Message *</label>
-                                    <textarea id="form_message" name="message" class="form-control"
+                                    {% for error in errors['message']%}
+                                        <div class="alert alert-danger">
+                                            {{ error }}
+                                        </div>
+                                    {% endfor %}
+                                    <label for="form_message">Message * value = "{{ message }}" </label>
+                                    <textarea id="form_message" name="message"  class="form-control"
                                               placeholder="Votre message ... *" rows="4" required
                                               data-error="S'il vous plaît, laisser un message."></textarea>
                                 </div>
